New layout colors, cleaned up contexts & views

--- a/sites/all/themes/omega_image/sass/_base.scss
+++ b/sites/all/themes/omega_image/sass/_base.scss
@@ -1,11 +1,17 @@
 @import "compass";
 
-$imageblue: #3a64e9;
-$purple : #491BB6;
-$purple_grey :	#635583;
+$imageblue: 		#3a64e9;
+$purple : 			#491BB6;
+$purple_grey :		#635583;
+$purple_dark: 		#342C43;
+$mustard_light :	#B6691B;
+$olive_dark: 		#50472C;
+$olive_grey: 		#8A887D;
+$sand:				#D6D6D6;
+$greyblue:			#465157;
 
 $darkblue: #1E2336;
-$brightgreen: #ceff00;
+$brightgreen: #7ECF8C;
 
 $default-box-shadow-color : #888;
 $default-box-shadow-h-offset : 3px;
