Fixes multilingual nodequeues

--- a/sites/all/themes/omega_image/sass/global.scss
+++ b/sites/all/themes/omega_image/sass/global.scss
@@ -228,7 +228,8 @@ h2.block-title	{	font-size: 1.4em;
 								}
 #block-views-product-block,
 #block-views-product-block-1,
-#block-views-all-products-block-3	{	position: relative;
+#block-views-all-products-block-3,
+#block-views-all-products-block-1	{	position: relative;
 
 										.view-content	{	.views-row 	{	position: inherit;
 																			
