Minor CSS modification

--- a/sites/all/themes/omega_image/sass/global.scss
+++ b/sites/all/themes/omega_image/sass/global.scss
@@ -321,6 +321,7 @@ h2.block-title	{	font-size: 1.4em;
 									.views-field-field-illustration	{ 	img 	{	border: 1px solid #ccc;
 																					background: #fff;
 																					padding: 20px;
+																					margin-bottom: 20em;
 																				}
 																	}	
 																	
