--- a/sites/all/themes/omega_image/css/omega-image-alpha-default-wide.css
+++ b/sites/all/themes/omega_image/css/omega-image-alpha-default-wide.css
@@ -1,1 +1,10 @@
 /* This file will hold styles that are loaded using the same media query as the wide grid. */
+/* line 4, ../sass/omega-image-alpha-default-wide.scss */
+ul#superfish-5 li a {
+  padding: 1em 2em;
+}
+/* line 8, ../sass/omega-image-alpha-default-wide.scss */
+ul#superfish-5 li a:hover,
+ul#superfish-5 li a.active {
+  padding: 1em 2em;
+}
