--- a/sites/all/themes/omega_image/sass/global.scss
+++ b/sites/all/themes/omega_image/sass/global.scss
@@ -788,7 +788,6 @@ h2.block-title	{	font-size: 1.4em;
 #block-locale-language	{	position: absolute;
 							top: 13px;
 							right: 0;
-							display: none;
 							
 							
 							ul 	{	li  {	display: inline;
@@ -933,14 +932,14 @@ ul#superfish-5		{	li  {	margin: 0;
 								padding: 0;
 								
 								a 	{ 	color: #eee;
-										padding: 14px 30px;
+										padding: 1em 2em;
 										text-decoration: none;
 										border: none;
 									}
 									
 								a:hover , 
 								a.active	{	@include background-image(linear-gradient(#fff, #bbb 20%, #ccc 70%, #ddd));
-												padding: 14px 30px;
+												padding: 1em 2em;
 												color: #222; 
 											}	
 							}
