--- a/sites/all/themes/omega_image/sass/omega-image-alpha-default.scss
+++ b/sites/all/themes/omega_image/sass/omega-image-alpha-default.scss
@@ -24,20 +24,7 @@ nav {	border-bottom: 0;
 			    }	     	
 	} 
 
-ul#superfish-5		{	li  {	margin: 0;
-								padding: 0;
-								
-								a 	{ 	color: #eee;
-										padding: 14px 30px;
-										text-decoration: none;
-										border: none;
-										border-left: 1px solid #888;
+ul#superfish-5		{	li  {	a 	{ 	border-left: 1px solid #888;
 									}
-									
-								a:hover , 
-								a.active	{	@include background-image(linear-gradient(#fff, #bbb 20%, #ccc 70%, #ddd));
-												padding: 14px 30px;
-												color: #222; 
-											}	
 							}
 					}		
