--- a/sites/all/themes/bootstrap/sass/overrides.scss
+++ b/sites/all/themes/bootstrap/sass/overrides.scss
@@ -16,6 +16,92 @@ html, body			{	background: #fff;
 						padding-top: 40px;
 					}
 
+.product-spacer		{	min-height: 80px;
+					}
+
+ul#superfish-1	{	margin-top: -2em;
+					li 	{	@include border-bottom-radius(8px);
+															margin-left: 1px; 
+															background: $purple_grey;
+															
+															a 	{	color: #fff;
+																	padding: 20px 20px 8px 20px;
+																	text-transform: uppercase;
+																	border: none;
+																	font-size: .9em;
+																	@include border-bottom-radius(8px);
+																	
+																	&:hover	{	color: #eee;
+																				background: $greyblue;
+																				border-top: 1px solid #fff;
+																			}
+																}
+															
+															a.active	{	color: #fff;
+																			background: $greyblue;
+																			border-top: 1px solid #fff;
+																		}
+																		
+															.last	{	a 	{	border: none;
+																			}
+																	}				
+														}
+														
+													li.sf-item-1	{	margin-left: 0; 
+																		a 	{	border-left: none;
+																			}
+																	}	
+												}
+													
+								.sf-menu.sf-style-default {
+								    float: left;
+								    margin-bottom: 0;
+								    padding: 0px;
+								}
+							
+
+#block-views-news-block	{	font-family: 'Roboto', sans-serif;
+							color: #777;
+							
+							.views-field-field-gallery-image img {	padding: 1px;
+																	background: #ccc;
+																	@include single-box-shadow;
+																}
+
+							.views-field-title	{	font-weight: 400;
+													font-size: 1.6em;
+													line-height: 140%;
+													padding-bottom: 3em;
+													font-family: 'Roboto Condensed', sans-serif;
+													color: #222;
+												}
+							
+							.views-field-body p {	font-weight: 100;
+													font-size: 1.4em;
+													padding-bottom: 1.4em;
+													line-height: 140%;
+												}	
+						}
+						
+#block-views-news-block-1	{	font-family: 'Roboto', sans-serif;
+								color: #222;
+
+								.views-field-title	{	font-weight: 300;
+														font-size: 1em;
+														padding: 5px 0;
+														font-family: 'Roboto Condensed', sans-serif;
+														
+														a 	{	color: #222;
+																text-decoration: none;
+															}
+													}
+							
+								.views-field-field-gallery-image img {	padding: 4px;
+																		background: #fff;
+																		@include single-box-shadow;
+																	}
+							}
+							
 #footer		{	border-top: 8px solid $purple_grey;
 				background-color: $purple_dark;	
 				font-weight: 300;
@@ -77,10 +163,8 @@ html, body			{	background: #fff;
 																				}
 													}	
 
-
 #block-views-product-block,
 #block-views-product-block-1,
-#block-views-all-products-block-3,
 #block-views-all-products-block-1	{	position: relative;
 
 										.view-content	{	.views-row 	{	position: inherit;
@@ -91,20 +175,88 @@ html, body			{	background: #fff;
 																				}
 																		}
 														}			
+/*
 									
-										.view-filters	{	padding: 1em 0 0 2em;
-															border: 1px solid #ccc;
-															margin-bottom: 10px;
+										.view-filters	{	margin-left: 3em;
 															color: #222;
 										
-															.form-item-sort-by	{	margin-left: 5em;
-																					padding-left: 2em;
-																					border-left: 1px solid #444;
+															.views-exposed-widget	{	label,
+																						option	{ 	font-family: 'Roboto', sans-serif;
+																									margin-bottom: 5px;
+																									font-weight: 300;
+																								}
+																					}
+														}
+*/
+													
+										.views-field-term-node-tid-1,		
+										.views-field-field-product-categories,
+										.views-field-field-country				{	@include lightborder;
+																					border-bottom-color: transparent;
+																					padding: 8px 0 2px 1em;
+																					margin: 0;
+																					background: $purple_grey; 
+																					
+																					a   {	font-family: "Roboto", sans-serif;
+																							color: #fff;
+																					
+																							&:hover	{	color: $brightgreen;
+																									}
+																						}
+																				}				
+											
+										.views-field-field-illustration	{	padding: 1em 0;
+																			@include lightborder;
+																			margin-bottom: 10px;
+																			background: #fff;
+																		}
+										.views-field-title,
+										.views-field-field-supplier,
+										.views-field-term-node-tid		{	padding: 5px;
+																			a   {	font-family: "Roboto", sans-serif;
+																					color: #111;
 																				}
-																				
-															.views-exposed-widget	{	margin: 0 2em 2em 0;
-																						
-																						label,
+																			
+																		}
+																		
+										.views-field-field-country		{	background: $greyblue;
+																			@include border-top-radius(5px);
+																			
+																			a   {	font-family: "Roboto", sans-serif;
+																					color: #fff;
+																					
+																					&:hover	{	color: $brightgreen;
+																							}
+																				}
+																		}
+																		
+										.views-field-title	a			{	color: #222;
+																			font-size: 1.1em;
+																			font-weight: 300;
+																		}
+																		
+										.views-field-field-country		{	text-transform: uppercase;
+																		}
+																			
+																							
+								}
+								
+#block-views-all-products-block-3	{	position: relative;
+
+										.view-content	{	margin-top: -60px;
+															.views-row 	{	position: inherit;
+																			
+																			a   {	text-decoration: none;
+																					font-family: 'Roboto Condensed', 'Arial Narrow', sans-serif;
+																					font-weight: 400;
+																				}
+																		}
+														}			
+									
+										.view-filters	{	margin-left: 3em;
+															color: #222;
+										
+															.views-exposed-widget	{	label,
 																						option	{ 	font-family: 'Roboto', sans-serif;
 																									margin-bottom: 5px;
 																									font-weight: 300;
@@ -164,6 +316,289 @@ html, body			{	background: #fff;
 																							
 								}
 							
+#block-views-about-block	{	padding: 2em 0;
+								.views-field-body	{	font-family: "Roboto", sans-serif;
+														font-weight: 100;
+														font-size: 1.6em;
+														line-height: 160%;
+														color: #444;
+													}	
+							}
+							
+#block-views-contact-block	{	color: #555;
+
+								.views-row	{	margin-bottom: 2em;
+								
+												.views-field-field-phone	{ 	padding-top: 8px;
+																				padding-bottom: 2px;
+																}
+								
+												.views-label	{	float: left;
+																}
+																
+												.views-field-title	{	color: #222;
+																		font-family: "Roboto", sans-serif;
+																		font-weight: bold;
+																		margin-bottom: .5em;
+																	}
+														
+								.views-field-body	p,
+								.views-field-body 		{	@include small-body;
+														}	
+													
+								.views-field-field-google-map	{	padding: 1em 0;
+								
+																	a 	{	color: #fff;
+																			text-decoration: none;
+																			text-transform: uppercase;
+																			background: $purple_grey;
+																			padding: 14px 10px 4px 10px;
+																			display: block;
+																			font-size: .7em;
+																			clear: both;
+																			@include border-bottom-radius(8px);
+																				
+																			&:hover	{	color: #fff;
+																						background: $purple_dark;
+																					}
+																		}
+																}					
+																	
+											}
+							}
+							
+							
+.term-listing-heading	{	h2	{	font-family: "Roboto", sans-serif;
+									font-weight: 100;
+									font-size: 3em;
+									margin-bottom: .4em;
+									text-transform: capitalize;
+								}
+						}
+						
+.taxonomy-term-description	{	p 	{	font-family: "Roboto", sans-serif;
+										font-weight: 300;
+										font-size: 1.3em;
+										padding-bottom: .2em;
+										margin-bottom: 1em;
+										line-height: 140%;
+									}
+							}
+
+#block-views-country-terms-block	{	.views-field-field-country	{	.field-content,
+																		.country-title	{	font-family: "Roboto", sans-serif;
+																							font-weight: 100;
+																							font-size: 3em;
+																							padding-bottom: .2em;
+																							margin-bottom: 1em;
+																							text-transform: capitalize;
+																						}
+																	}
+									}
+																
+#block-views-country-by-suppliers-block-1	{	font-family: "Roboto", sans-serif;
+												font-weight: 300;
+												
+												.views-row	{	clear: both;
+																margin-bottom: 40px;
+															}
+																					
+															
+												.views-field-name-i18n	{	margin-bottom: 10px;
+																			font-weight: 400;
+																			font-size: 1.2em;
+																			
+																			a 	{	color: #222;
+																				text-decoration: none;
+																				
+																				&:hover	{	text-decoration: underline;
+																						}
+																			}
+																	}			
+															
+												.views-field-field-logo	img {	@include lightborder;
+																				margin: 0 10px 10px 0;
+																				float: left;
+																			}
+
+									}
+									
+#block-views-suppliers-block-1	{	.views-field-description-i18n 	{	@include small-body;
+																		margin-top: 0;
+																	}
+																
+									.views-field-field-logo	img	{	padding: 1em;
+																	border: 1px solid #ccc;
+																	float: left;
+																	margin-right: 20px;
+																}
+																	
+									.views-label-field-country	{	float: left;
+																	padding-right: 20px;
+																}						
+																	
+								}
+								
+#block-views-suppliers-block-2	{	font-size: .8em;
+
+									.pagination,
+									.pagination-centered	{	display: none;
+																ul	{	display: none;
+																	}
+															}
+
+									h3	{	display: none;
+										}
+										
+									.views-row	{	height: 390px;
+													background: #fff;
+													margin-bottom: 1em;
+													
+													.views-field	{	@include lightborder;
+																	}
+													
+													.views-field-field-illustration	{	padding: 20px;
+																						border-bottom: none;
+																						
+																					}
+													
+													.views-field-title,
+													.views-field-body	{	padding: 10px;
+																		}
+													
+													.views-field-title	{	margin-bottom: 10px;
+																						
+																			a  {	color: #222;
+																					font-size: 1.1em;
+																					text-decoration: none;
+																					font-family: "Roboto", sans-serif;
+																					text-transform: uppercase;
+																					font-weight: 300;
+																					
+																					&:hover	{	text-decoration: underline;
+																							}
+																				}
+														}
+													
+														
+													.views-field-body	 	{	font-family: "Tahoma", "Lucida Grande", sans-serif;
+																				font-weight: 200;
+																				font-size: 1em;
+																				line-height: 160%;
+																				color: #444;
+																				margin: 20px 0 0 10px;
+																			}	
+													
+													.views-field-field-grape-varieties	{	text-transform: uppercase;
+																							border-bottom: none;
+																							padding: 6px 10px;
+																							
+																							a 	{ 	color: $imageblue;
+																									text-decoration: none;
+																								}
+																						}							
+												}		
+								}
+								
+								
+#block-views-product-block-2	{	margin: 2em 0;
+									font-family: "Roboto", sans-serif;
+									
+									table.acids-table	{	width: 100%;
+															td 	{	width: 50%;
+																	padding: 5px;
+																}
+														}
+									
+									h2.acids-table-name	{	font-size: 1em;
+														}
+
+									.views-field-field-illustration	{ 	img 	{	border: 1px solid #ccc;
+																					background: #fff;
+																					padding: 20px;
+																					margin-bottom: 20em;
+																				}
+																	}	
+																	
+									.views-field-title	{	font-weight: 300;
+															font-size: 2em;
+															line-height: 110%;
+															margin-bottom: 1.2em;
+														}	
+														
+									.views-field-body,
+									.views-field-body-1	{	font-size: 1.1em;
+															font-weight: 300;
+															line-height: 160%;
+														}										
+																	
+									.field_title	{	font-weight: 300;
+														font-size: 1em;
+														margin-top: 2em;
+														padding-bottom: .2em;
+														border-bottom: 1px dotted #aaa;
+														/* margin-bottom: 20px; */
+													}
+													
+												
+									.views-field-field-supplier,
+									.views-field-field-country	{	.field-content 	{	font-size: 1.1em;
+																						font-weight: 300;
+																						margin-bottom: 10px;
+									
+																						a 	{	color: $purple_dark;
+																								text-decoration: none;
+																								&:hover	{	text-decoration: underline;
+																										}
+																							}	
+																					}
+																}																						
+								}
+								
+
+#block-views-about-block-1	{	font-family: "Roboto", sans-serif;
+								font-weight: 300;
+								font-size: 1em;
+								line-height: 140%;
+							}
+							
+.view-id-downloads				{	color: #222;
+									font-weight: 300;
+									font-family: 'Roboto', sans-serif;
+									
+									.views-row-odd	{	background: #eee;
+													}
+									
+									.views-row-even	{	color: #222;
+													}
+									
+									.views-row	{	padding: 2em 0;
+												} 
+												
+									.views-field-title	{	text-transform: uppercase;
+															padding-bottom: 1em;
+															padding-left: 1em;
+														}
+																
+									.views-field-field-download	{	font-size: .9em;
+																	padding-bottom: 1em;
+																	padding-left: 1em;
+																	
+																	a  	{	color: #444;
+																			text-decoration: none;
+																			padding: 5px 24px;
+																			@include background-image(linear-gradient(top, #fff , #ccc));
+																			@include border-radius(8px);
+																			border: 1px solid #aaa;
+																			
+																			&:hover	{	@include background-image(linear-gradient(top, #ccc , #ddd ));
+																						color: #222;
+																					}
+																			
+																		}
+																}
+								}
+
 .view-frontpage-news	{	margin: 9em 0 0 0;
 							.views-row	{	padding: 1em 0;
 										}
